<resources>
    <string name="app_name">VeGarden</string>
    <string name="signin_hint">Sign in to access your vegetable garden</string>
    <string name="email">e-mail</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_ul"><u>Sign up</u></string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_ul"><u>Sign in</u></string>
    <string name="signup_hint">Sign up and create your vegetable garden</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="total_area">Total area: <b>%1$s m²</b></string>
    <string name="next">Next</string>
    <string name="garden_size_question">What is the size of your vegetable garden?</string>
    <string name="post_a_photo">Post a photo</string>
    <string name="name_surname_says">%1$s %2$s says:</string>
    <string name="write_a_post">Write a post</string>
    <string name="my_vegarden">My VeGarden</string>
    <string name="settings">Settings</string>
    <string name="explore">Explore</string>
    <string name="sign_out">Sign out</string>
    <string name="crop">Crop</string>
    <string name="date_of_sowing">Date of sowing</string>
    <string name="number_of_plants">Number of plants</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="unknown">Unknown</string>
    <string name="days_ago">days ago</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="choose_a_value">Choose a value</string>
    <string name="my_posts_and_photos">My posts and photos</string>
    <string name="user_posts_and_photos">%1$s\'s posts and photos</string>
    <string name="my_notes">My notes</string>
    <string name="user_notes">%1$s\'s notes</string>
    <string name="my_friends">My Friends</string>
    <string name="logout">Logout</string>
    <string name="my_account">My Account</string>
    <string name="my_friends_posts">My friends\' posts</string>
    <string name="explore_other_vegardens">Explore other VeGardens</string>
    <string name="user_vegarden">%1$s\'s VeGarden</string>
    <string name="change_garden_size_alert">If you change the garden size you will loose all the data of your VeGarden. Are you sure you want to continue?</string>
    <string name="the_size_of_a_plot_is">The size of a plot is <b>%1$s m²</b></string>
    <string name="what_is_plot">A plot is the ground unit where you can sow one type of crop</string>
    <string name="change_garden_size">Change garden size</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="garden_description">This garden has a size of %1$d m x %2$d m (total area: %3$d m²). Each plot has a size of %4$d m².</string>
    <string name="invalid_email">Not a valid e-mail address</string>
    <string name="invalid_password">Must contain at least 8 character</string>
    <string name="invalid_email_password">e-mail or password are not valid</string>
    <string name="empty_field">This field should not be empty</string>
    <string name="different_passwords">The two passwords are different</string>
    <string name="registration_error">Not able to register the user, check the internet connection or try later</string>
    <string name="not_valid_number">Not a valid number</string>
    <string name="connection_error">Connection error, check if you are connected to internet or try later</string>
    <string name="plot_details">Plot details</string>
    <string name="write_something_or_exit">Write something or exit</string>
    <string name="no_posts_found">No posts found</string>
    <string name="error_picking_image">Error while picking the image</string>
    <string name="friend_added">Friend added</string>
    <string name="friend_removed">Friend removed</string>
    <string name="theme">Theme</string>
    <string-array name="theme_list">
        <item>Light</item>
        <item>Dark</item>
        <item>System default</item>
    </string-array>

    <string name="uncultivated">Uncultivated</string>
    <string name="watermelon">Watermelons</string>
    <string name="broccoli">Broccoli</string>
    <string name="carrots">Carrots</string>
    <string name="cucumbers">Cucumbers</string>
    <string name="corn">Corn</string>
    <string name="eggplant">Eggplants</string>
    <string name="melons">Melons</string>
    <string name="peppers">Peppers</string>
    <string name="peas">Peas</string>
    <string name="tomatoes">Tomatoes</string>
    <string name="leeks">Leeks</string>
    <string name="radishes">Radishes</string>
    <string name="other">Other</string>
    <string-array name="crops_list">
        <item>@string/uncultivated</item>
        <item>@string/broccoli</item>
        <item>@string/carrots</item>
        <item>@string/corn</item>
        <item>@string/cucumbers</item>
        <item>@string/eggplant</item>
        <item>@string/leeks</item>
        <item>@string/melons</item>
        <item>@string/peas</item>
        <item>@string/peppers</item>
        <item>@string/radishes</item>
        <item>@string/tomatoes</item>
        <item>@string/watermelon</item>
        <item>@string/other</item>
    </string-array>
</resources>