<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    tools:context=".activities.GardenSetupActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24sp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:fontFamily="@font/josefinsans_regular"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#1A9E38"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/garden_size_question"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilWidth"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etWidth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/width"
                        android:inputType="number"
                        android:maxLength="3"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tvWidthUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:text="m"
                    android:textColor="#808080"
                    android:textSize="18sp" />
            </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="25dp"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:src="@drawable/ic_cross" />

            <RelativeLayout
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilHeight"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etHeight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/height"
                        android:inputType="number"
                        android:maxLength="3"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tvHeightUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:text="m"
                    android:textColor="#808080"
                    android:textSize="18sp" />
            </RelativeLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/tvArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:visibility="invisible"
            tools:text="@string/total_area"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvPlotSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:text="@string/the_size_of_a_plot_is" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/what_is_plot"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/primary"
        android:text="@string/next"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:icon="@drawable/ic_arrow_forward"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>